--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: #333;
     font-size: 16px;
     margin: 0;
